# meilisearch-python-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  Makefile  README.md  codecov.yml  docker-compose.https.yml  docker-compose.yml  index.html  justfile  mkdocs.yaml  objects.inv  prek.toml  pyproject.toml  sitemap.xml  tox.ini
.github/: FUNDING.yml  dependabot.yaml  release-draft-template.yaml  renovate.json5
.github/scripts/: download-latest.sh
.github/workflows/: docs_publish.yml  linting.yaml  nightly_testing.yml  prek_update.yml  pypi_publish.yaml  pypi_publish.yml  release-drafter.yaml  release-drafter.yml  testing.yaml  testing.yml
async_client_api/: index.html
async_index_api/: index.html
async_search_client/: __init__.py  _http_requests.py  client.py  errors.py  index.py
async_search_client/models/: __init__.py  base_config.py  client.py  dump.py  health.py  index.py  search.py  settings.py  update.py  version.py
async_search_client/paths/: __init__.py  url.py  valid_paths.py
async_search_client/utils/: camel.py
benchmark/: run_benchmark.py
client_api/: index.html
css/: custom.css
custom_serializer/: index.html
decorators_api/: index.html
docs/: CNAME  api.md  async_client_api.md  async_index_api.md  client_api.md  custom_serializer.md  decorators_api.md  index.md  index_api.md  json_handler.md  plugins.md  pydantic.md  tasks_api.md
docs/css/: custom.css
docs/js/: umami.js
examples/: .gitignore  README.md  add_documents_decorator.py  add_documents_in_batches.py  async_add_documents_decorator.py  async_add_documents_in_batches.py  async_documents_and_search_results.py  async_search_tracker.py  async_update_settings.py  documents_and_search_results.py  fastapi_example.py  orjson_example.py  pyproject.toml  requirements.txt  search_tracker.py  ujson_example.py  update_settings.py
examples/tests/: conftest.py  test_async_examples.py  test_examples.py  test_fastapi_examples.py
index_api/: index.html
js/: umami.js
json_handler/: index.html
meilisearch_python_async/: __init__.py  _client.py  _http_requests.py  _index.py  _task.py  _utils.py  _version.py  client.py  decorators.py  errors.py  index.py  task.py
meilisearch_python_async/models/: __init__.py  client.py  documents.py  index.py  search.py  settings.py  task.py  update.py  version.py
meilisearch_python_sdk/: __init__.py  _batch.py  _client.py  _http_requests.py  _index.py  _task.py  _utils.py  _version.py  decorators.py  errors.py  index.py  json_handler.py  plugins.py  types.py
meilisearch_python_sdk/_client/: __init__.py  _async_client.py  _base_client.py  _client.py  _common.py
meilisearch_python_sdk/index/: __init__.py  _common.py  async_index.py  index.py
meilisearch_python_sdk/models/: batch.py  client.py  documents.py  index.py  search.py  settings.py  task.py  version.py  webhook.py
overrides/partials/: footer.html
plugins/: index.html
pydantic/: index.html
search/: search_index.json
tests/: conftest.py  test_async_client.py  test_async_documents.py  test_async_index.py  test_async_index_plugins.py  test_async_search.py  test_async_task.py  test_client.py  test_decorators.py  test_documents.py  test_errors.py  test_http_requests.py  test_index.py  test_index_plugins.py  test_search.py  test_settings_models.py  test_task.py  test_utils.py  test_version.py
tests/examples/: test_async_examples.py  test_examples.py
tests/integration/: test_client.py  test_documents.py  test_index.py  test_search.py
tests/unit/: test_build_url.py  test_camel.py  test_errors.py
