[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meilisearch-python-sdk"
description = "A Python client providing both async and sync support for the Meilisearch API"
authors = [ { name = "Paul Sanders", email = "paul@paulsanders.dev" } ]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["meilisearch", "async", "python", "client", "sdk"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "aiofiles>=0.7",
  "camel-converter[pydantic]>=1.0.0",
  "httpx2[http2]>=2.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
orjson = ["orjson>=3.10.6"]
all = ["orjson"]

[dependency-groups]
dev = [
  "mkdocstrings[python]==1.0.6",
  "pyrefly==1.1.1",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-asyncio==1.4.0",
  "pytest-xdist==3.8.0",
  "prek==0.4.10",
  "ruff==0.15.22",
  "types-aiofiles==25.1.0.20260518",
  "typing-extensions==4.16.0",
  "zensical==0.0.51",
]

[tool.hatch.version]
path = "meilisearch_python_sdk/_version.py"

[project.urls]
repository = "https://github.com/sanders41/meilisearch-python-sdk"
homepage = "https://github.com/sanders41/meilisearch-python-sdk"
documentation = "https://meilisearch-python-sdk.paulsanders.dev"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_python_sdk --cov-report term-missing --no-cov-on-fail --ignore examples"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = ["no_parallel"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "if TYPE_CHECKING:", "pragma: no cover"]

[tool.pyrefly]
ignore-missing-imports = [
    "aiocache.*",
    "truststore.*",
]
project-excludes = ["examples/**"]

[[tool.pyrefly.sub-config]]
matches = "tests/**"
check-unannotated-defs = false

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select=[
  "E",  # pycodestyle
  "B",  # flake8-bugbear
  "W",  # Warning
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",  # Don't allow print
  "T203",  # Don't allow pprint
  "ANN",  # Type annotations
  "ASYNC",  # flake8-async
  "RUF022",  # Unsorted __all__
  "RUF023",  # Unforted __slots__
]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]

[tool.ruff.lint.per-file-ignores]
  "tests/**" = ["ANN"]
  "examples/tests/**" = ["ANN"]

[tool.rumdl]
line-length = 100

[tool.rumdl.per-file-ignores]
"README.md" = ["MD024"]  # Duplicate heading
"docs/**/*.md" = ["MD041"]  # Relax rules for docs
